Fix: View Profile Reservations History dates and other minor CSS and layout issues

--- a/HandymanTools/Content/Site.css
+++ b/HandymanTools/Content/Site.css
@@ -7,9 +7,12 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
-    border-left: 1pt solid #bcd8e2;
+    /*border-left: 1pt solid #bcd8e2;*/
     /* color: #93a3b5; */
     color: #025678;
+}
+.sidebar-content {
+    border-right: 1pt solid #bcd8e2;
 }
 .navbar-fixed-top {
     text-align: center;
